дейтпикер + fix высоты textarea + закончил страницу cjplfybt ntylthf

--- a/src/personal-account_my-company.html
+++ b/src/personal-account_my-company.html
@@ -380,8 +380,7 @@
                             </label>
                             <label class="materil-group active personal-account__field">
                                 <span class="materil-group__label">Описание компании</span>
-                                <textarea class="form-control base-input materil-group__input materil-group__textarea basket__suppliers-textarea">Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили распространение в капитальном строительстве. Высокая плотность тяжёлого бетона оимость производства и высокую теплопроводность. 
-                                </textarea>
+                                <textarea class="form-control base-input materil-group__input materil-group__textarea basket__suppliers-textarea">Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили распространение в капитальном строительстве. Высокая плотность тяжёлого бетона оимость производства и высокую теплопроводность.</textarea>
                                 <span class="materil-group__label-backdrop"></span>
                             </label>
 
