--- a/src/basket.html
+++ b/src/basket.html
@@ -731,8 +731,7 @@
                             </div>
                             <label class="materil-group active basket__suppliers-textarea-group">
                                 <span class="materil-group__label">Комментарий к заявке</span>
-                                <textarea class="form-control base-input materil-group__input materil-group__textarea basket__suppliers-textarea">Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили распространение в капитальном строительстве. Высокая плотность тяжёлого бетона обусловлена как используемым наполнителем, так и значительным механическим уплотнением. К плюсам тяжёлых бетонов можно отнести долговечность, высокую прочность, твёрдость и морозостойкость; к минусам — значительную стоимость производства и высокую теплопроводность.
-                                </textarea>
+                                <textarea class="form-control base-input materil-group__input materil-group__textarea basket__suppliers-textarea">Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили распространение в капитальном строительстве. Высокая плотность тяжёлого бетона обусловлена как используемым наполнителем, так и значительным механическим уплотнением. К плюсам тяжёлых бетонов можно отнести долговечность, высокую прочность, твёрдость и морозостойкость; к минусам — значительную стоимость производства и высокую теплопроводность.</textarea>
                                 <span class="materil-group__label-backdrop"></span>
                             </label>
                         </div>
