--- a/src/ui.html
+++ b/src/ui.html
@@ -122,6 +122,15 @@
         </div>
 
         <div class="form-group">
+            <label class="materil-group materil-group--with-icon basket__suppliers-field">
+                <span class="materil-group__label">Период проведения конкурса*</span>
+                <input type="text" name="daterange" class="form-control base-input materil-group__input" value="20.08.2021 - 30.08.2021" />
+                <img class="materil-group__icon" src="img/icon-calendar.svg" alt="">
+                <div class="materil-group__error-text">Укажите Период проведения конкурса</div>
+            </label>
+        </div>
+
+        <div class="form-group">
             <div class="file-reader">
                 <div class="file-reader__return">
                     <span class="file-reader__return-text"></span>
