страница добавить заявку + поправил на всех страницах модалку авторизации (имела старую вёрстку)

--- a/src/advertisement-card.html
+++ b/src/advertisement-card.html
@@ -285,7 +285,7 @@
                     <img src="img/icon-subscribe.svg" alt="">
                     Подписаться на разлел
                 </a>
-            </div>  
+            </div>
             <h2 class="h2 product-card__title">Продам блок</h2>
             <div class="product-card">
                 <div class="product-card__carusel">
@@ -403,12 +403,12 @@
     </div>
     <!-- AUTH Modal -->
     <div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-stroim">
-            <div class="modal-content modal-stroim__content">
-                <button type="button" class="btn-close modal-stroim__btn-close" data-bs-dismiss="modal"
+        <div class="modal-dialog modalS">
+            <div class="modal-content modalS__content">
+                <button type="button" class="btn-close modalS__btn-close" data-bs-dismiss="modal"
                         aria-label="Close"></button>
-                <div class="modal-stroim__title">Вход</div>
-                <form class="modal-stroim__form">
+                <div class="modalS__title">Вход</div>
+                <form class="modal-auth">
                     <label class="materil-group">
                         <span class="materil-group__label">Email</span>
                         <input type="email" class="form-control base-input materil-group__input">
@@ -419,9 +419,9 @@
                         <input type="password" class="form-control base-input materil-group__input">
                         <div class="materil-group__error-text">Укажите пароль</div>
                     </label>
-                    <button type="submit" class="btn btn-primary modal-stroim__btn">Войти</button>
+                    <button type="submit" class="btn btn-primary modal-auth__btn">Войти</button>
                 </form>
-                <div class="modal-stroim__actions">
+                <div class="modal-auth__actions">
                     <a href="" class="modal-stroim__link link">
                         Зарегистрироваться
                     </a>
