--- a/src/ceni-postavshikov-horizontal.html
+++ b/src/ceni-postavshikov-horizontal.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Цены поставщиков</title>
 </head>
 
 <body class="page transition-off">
@@ -367,7 +367,7 @@
                                     Показать все
                                     <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                    </svg>    
+                                    </svg>
                                 </button>
                             </div>
                        </div>
@@ -418,7 +418,7 @@
                                     Показать все
                                     <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                    </svg>    
+                                    </svg>
                                 </button>
                             </div>
                         </div>
@@ -469,7 +469,7 @@
                                     Показать все
                                     <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                    </svg>    
+                                    </svg>
                                 </button>
                             </div>
                         </div>
@@ -520,7 +520,7 @@
                                     Показать все
                                     <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                    </svg>    
+                                    </svg>
                                 </button>
                             </div>
                         </div>
@@ -547,13 +547,13 @@
                                         <path d="M4.35355 0.646935C4.15829 0.451673 3.84171 0.451673 3.64645 0.646935L0.464466 3.82892C0.269204 4.02418 0.269204 4.34076 0.464466 4.53602C0.659728 4.73128 0.976311 4.73128 1.17157 4.53602L4 1.70759L6.82843 4.53602C7.02369 4.73128 7.34027 4.73128 7.53553 4.53602C7.7308 4.34076 7.7308 4.02418 7.53553 3.82892L4.35355 0.646935ZM4.5 13.0005L4.5 1.00049L3.5 1.00049L3.5 13.0005L4.5 13.0005Z"/>
                                     </svg>
                                 </a>
-                            </div>    
+                            </div>
                             <div class="catalog-direction">
                                 <a herf="#" class="btn btn-icon catalog-direction__btn ">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <rect x="3" y="3" width="18" height="7"/>
                                         <rect x="3" y="14" width="18" height="7"/>
-                                    </svg> 
+                                    </svg>
                                 </a>
                                 <a class="btn btn-icon catalog-direction__btn active">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -604,7 +604,7 @@
                                                 <img src="img/star.svg" alt="">
                                                 <img src="img/star.svg" alt="">
                                                 <img src="img/star.svg" alt="">
-                                            </span>    
+                                            </span>
                                         </p>
                                         <div class="catalog-item__phone">
                                             <p class="catalog-item__phone__label">+ 7  Показать номер</p>
@@ -670,7 +670,7 @@
                                                 <img src="img/star.svg" alt="">
                                                 <img src="img/star.svg" alt="">
                                                 <img src="img/star.svg" alt="">
-                                            </span>    
+                                            </span>
                                         </p>
                                         <div class="catalog-item__phone">
                                             <p class="catalog-item__phone__label">+ 7  Показать номер</p>
@@ -736,7 +736,7 @@
                                                 <img src="img/star.svg" alt="">
                                                 <img src="img/star.svg" alt="">
                                                 <img src="img/star.svg" alt="">
-                                            </span>    
+                                            </span>
                                         </p>
                                         <div class="catalog-item__phone">
                                             <p class="catalog-item__phone__label">+ 7  Показать номер</p>
@@ -802,7 +802,7 @@
                                                 <img src="img/star.svg" alt="">
                                                 <img src="img/star.svg" alt="">
                                                 <img src="img/star.svg" alt="">
-                                            </span>    
+                                            </span>
                                         </p>
                                         <div class="catalog-item__phone">
                                             <p class="catalog-item__phone__label">+ 7  Показать номер</p>
@@ -880,12 +880,12 @@
     </div>
     <!-- AUTH Modal -->
     <div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-stroim">
-            <div class="modal-content modal-stroim__content">
-                <button type="button" class="btn-close modal-stroim__btn-close" data-bs-dismiss="modal"
+        <div class="modal-dialog modalS">
+            <div class="modal-content modalS__content">
+                <button type="button" class="btn-close modalS__btn-close" data-bs-dismiss="modal"
                         aria-label="Close"></button>
-                <div class="modal-stroim__title">Вход</div>
-                <form class="modal-stroim__form">
+                <div class="modalS__title">Вход</div>
+                <form class="modal-auth">
                     <label class="materil-group">
                         <span class="materil-group__label">Email</span>
                         <input type="email" class="form-control base-input materil-group__input">
@@ -896,9 +896,9 @@
                         <input type="password" class="form-control base-input materil-group__input">
                         <div class="materil-group__error-text">Укажите пароль</div>
                     </label>
-                    <button type="submit" class="btn btn-primary modal-stroim__btn">Войти</button>
+                    <button type="submit" class="btn btn-primary modal-auth__btn">Войти</button>
                 </form>
-                <div class="modal-stroim__actions">
+                <div class="modal-auth__actions">
                     <a href="" class="modal-stroim__link link">
                         Зарегистрироваться
                     </a>
