--- a/src/customers-requests.html
+++ b/src/customers-requests.html
@@ -329,7 +329,7 @@
                                     Показать все
                                     <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                    </svg>    
+                                    </svg>
                                 </button>
                             </div>
                        </div>
@@ -586,12 +586,12 @@
     </div>
 <!-- AUTH Modal -->
 <div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-stroim">
-        <div class="modal-content modal-stroim__content">
-            <button type="button" class="btn-close modal-stroim__btn-close" data-bs-dismiss="modal"
+    <div class="modal-dialog modalS">
+        <div class="modal-content modalS__content">
+            <button type="button" class="btn-close modalS__btn-close" data-bs-dismiss="modal"
                     aria-label="Close"></button>
-            <div class="modal-stroim__title">Вход</div>
-            <form class="modal-stroim__form">
+            <div class="modalS__title">Вход</div>
+            <form class="modal-auth">
                 <label class="materil-group">
                     <span class="materil-group__label">Email</span>
                     <input type="email" class="form-control base-input materil-group__input">
@@ -602,9 +602,9 @@
                     <input type="password" class="form-control base-input materil-group__input">
                     <div class="materil-group__error-text">Укажите пароль</div>
                 </label>
-                <button type="submit" class="btn btn-primary modal-stroim__btn">Войти</button>
+                <button type="submit" class="btn btn-primary modal-auth__btn">Войти</button>
             </form>
-            <div class="modal-stroim__actions">
+            <div class="modal-auth__actions">
                 <a href="" class="modal-stroim__link link">
                     Зарегистрироваться
                 </a>
