--- a/src/add-an-ad.html
+++ b/src/add-an-ad.html
@@ -504,11 +504,12 @@
 
     <!-- AUTH Modal -->
     <div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-stroim">
-            <div class="modal-content modal-stroim__content">
-                <button type="button" class="btn-close modal-stroim__btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                <div class="modal-stroim__title">Вход</div>
-                <form class="modal-stroim__form">
+        <div class="modal-dialog modalS">
+            <div class="modal-content modalS__content">
+                <button type="button" class="btn-close modalS__btn-close" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                <div class="modalS__title">Вход</div>
+                <form class="modal-auth">
                     <label class="materil-group">
                         <span class="materil-group__label">Email</span>
                         <input type="email" class="form-control base-input materil-group__input">
@@ -519,9 +520,9 @@
                         <input type="password" class="form-control base-input materil-group__input">
                         <div class="materil-group__error-text">Укажите пароль</div>
                     </label>
-                    <button type="submit" class="btn btn-primary modal-stroim__btn">Войти</button>
+                    <button type="submit" class="btn btn-primary modal-auth__btn">Войти</button>
                 </form>
-                <div class="modal-stroim__actions">
+                <div class="modal-auth__actions">
                     <a href="" class="modal-stroim__link link">
                         Зарегистрироваться
                     </a>
