--- a/src/add-tender.html
+++ b/src/add-tender.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Объявить тендер</title>
 </head>
 
 <body class="page transition-off">
@@ -356,7 +356,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -440,7 +440,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -524,7 +524,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -608,7 +608,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -692,7 +692,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -776,7 +776,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -860,7 +860,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -944,7 +944,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -1028,7 +1028,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -1112,7 +1112,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -1196,7 +1196,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -1280,7 +1280,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -1364,7 +1364,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -1448,7 +1448,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -1532,7 +1532,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -1616,7 +1616,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -1700,7 +1700,7 @@
                                 Показать все
                                 <svg class="arrow-down" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.239442 1.43235L5.46073 6.77428C5.75445 7.07524 6.24479 7.07524 6.53972 6.77428L11.7598 1.43235C12.0801 1.10473 12.0801 0.587542 11.7598 0.259929C11.4208 -0.0866426 10.8563 -0.0866426 10.5168 0.259929L6.14407 4.73396C6.06506 4.81512 5.93418 4.81512 5.85517 4.73396L1.48249 0.259929C1.14353 -0.0866427 0.579004 -0.0866427 0.239442 0.259929C0.0802162 0.424032 7.59026e-08 0.634937 7.33876e-08 0.845841C7.08655e-08 1.05734 0.0802162 1.26824 0.239442 1.43235Z" fill=""/>
-                                </svg>    
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -1754,7 +1754,7 @@
                         <div class="announcement-tender__text">
                             <p>Данный способ проведения торгов предполагает их оформление в форме электронного аукциона, закрытого по составу участников.</p>
                             <p>В установленное Заказчи ком время участники торгов могут изменять свои предложения на установленный Заказчиком шаг.</p>
-                            <p>Участники торгов скрыты друг от друга, но видят ценовые предложения других участников. Итоги торгов доступны Заказчику и победителю.</p>  
+                            <p>Участники торгов скрыты друг от друга, но видят ценовые предложения других участников. Итоги торгов доступны Заказчику и победителю.</p>
                         </div>
                     </div>
                 </div>
@@ -1763,12 +1763,12 @@
     </div>
     <!-- AUTH Modal -->
     <div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-stroim">
-            <div class="modal-content modal-stroim__content">
-                <button type="button" class="btn-close modal-stroim__btn-close" data-bs-dismiss="modal"
+        <div class="modal-dialog modalS">
+            <div class="modal-content modalS__content">
+                <button type="button" class="btn-close modalS__btn-close" data-bs-dismiss="modal"
                         aria-label="Close"></button>
-                <div class="modal-stroim__title">Вход</div>
-                <form class="modal-stroim__form">
+                <div class="modalS__title">Вход</div>
+                <form class="modal-auth">
                     <label class="materil-group">
                         <span class="materil-group__label">Email</span>
                         <input type="email" class="form-control base-input materil-group__input">
@@ -1779,9 +1779,9 @@
                         <input type="password" class="form-control base-input materil-group__input">
                         <div class="materil-group__error-text">Укажите пароль</div>
                     </label>
-                    <button type="submit" class="btn btn-primary modal-stroim__btn">Войти</button>
+                    <button type="submit" class="btn btn-primary modal-auth__btn">Войти</button>
                 </form>
-                <div class="modal-stroim__actions">
+                <div class="modal-auth__actions">
                     <a href="" class="modal-stroim__link link">
                         Зарегистрироваться
                     </a>
