перенес старый datepicker + fix удаления тендера из лота

--- a/src/create-tender.html
+++ b/src/create-tender.html
@@ -592,7 +592,7 @@
                                 <a class="nav__link" data-page="#lot-3" href="#">Лот 3</a>
                             </li>
                         </ul>
-                        <a href="#" class="link js-add-nav-item">
+                        <a href="#" class="link js-add-nav-item nav__action-link">
                             <img src="img/icon-plus.svg" alt="">
                             <span class="ms-1">Добавить лот</span>
                         </a>
