fix sliders and add-ad

--- a/src/create-tender.html
+++ b/src/create-tender.html
@@ -776,7 +776,7 @@
                                     <input type="text" class="form-control base-input materil-group__input">
                                     <div class="materil-group__error-text">Ориентировочная сумма контракта</div>
                                 </label>
-                                <label class="materil-group basket__suppliers-field">
+                                <label class="basket__suppliers-field">
                                     <input type="checkbox" name="check-one" value="check-one" />
                                     <span>Требуется доставка</span>
                                 </label>
