--- a/src/ceni-postavshikov-card.html
+++ b/src/ceni-postavshikov-card.html
@@ -306,29 +306,28 @@
                             <div class="slider-item">
                                 <img src="img/product-card.jpg" alt="">
                             </div>
-                            <div class="slider-item">
-                                <img src="img/product-card.jpg" alt="">
-                            </div>
                         </div>
                     </div>
                     <div class="product-card__slider">
                         <div class="slider">
-                            <div class="slider-item">
+                            <div class="slider-item blur-item">
+                                <div class="blur-bg" style="background-image: url(../img/product-card.jpg);"></div>
                                 <img src="img/product-card.jpg" alt="">
                             </div>
-                            <div class="slider-item">
+                            <div class="slider-item blur-item">
+                                <div class="blur-bg" style="background-image: url(../img/product-card.jpg);"></div>
                                 <img src="img/product-card.jpg" alt="">
                             </div>
-                            <div class="slider-item">
+                            <div class="slider-item blur-item">
+                                <div class="blur-bg" style="background-image: url(../img/product-card.jpg);"></div>
                                 <img src="img/product-card.jpg" alt="">
                             </div>
-                            <div class="slider-item">
+                            <div class="slider-item blur-item">
+                                <div class="blur-bg" style="background-image: url(../img/product-card.jpg);"></div>
                                 <img src="img/product-card.jpg" alt="">
                             </div>
-                            <div class="slider-item">
-                                <img src="img/product-card.jpg" alt="">
-                            </div>
-                            <div class="slider-item">
+                            <div class="slider-item blur-item">
+                                <div class="blur-bg" style="background-image: url(../img/product-card.jpg);"></div>
                                 <img src="img/product-card.jpg" alt="">
                             </div>
                         </div>
