переделал faq на bootstrap collapse

--- a/src/home.html
+++ b/src/home.html
@@ -315,7 +315,7 @@
                         </div>
                     </div>
                 </div>
-            </div>          
+            </div>
         </div>
     </section>
 
@@ -357,7 +357,7 @@
             </div>
         </div>
     </section>
-    
+
     <section class="statistic">
         <div class="container">
             <h2 class="statistic__title h1">
@@ -502,7 +502,7 @@
                         <img src="img/banner-card-catalog.svg" alt="">
                     </a>
                 </div>
-            </div>  
+            </div>
         </div>
     </section>
 
@@ -562,7 +562,7 @@
                             <p class="saving-sector__text">Разместите свои товары в нашей системе (более 25 000 видов товаров). Получите поток новых покупателей.</p>
                             <div class="saving-transition">
                                 <a href="#" class="saving-transition__link">
-                                    Перейти в каталог                                   
+                                    Перейти в каталог
                                 </a>
                                 <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M12.3536 4.35355C12.5488 4.15829 12.5488 3.84171 12.3536 3.64645L9.17157 0.464466C8.97631 0.269204 8.65973 0.269204 8.46447 0.464466C8.2692 0.659728 8.2692 0.976311 8.46447 1.17157L11.2929 4L8.46447 6.82843C8.2692 7.02369 8.2692 7.34027 8.46447 7.53553C8.65973 7.7308 8.97631 7.7308 9.17157 7.53553L12.3536 4.35355ZM0 4.5H12V3.5H0V4.5Z"/>
@@ -570,7 +570,7 @@
                             </div>
                             <div>
                                 <button class="btn btn-secondary">Разместить прайс-лист</button>
-                            </div>                         
+                            </div>
                         </div>
                     </div>
                     <div class="saving__col">
@@ -579,7 +579,7 @@
                             <p class="saving-sector__text">Ежедневно в «онлайн» режиме получайе заявки от покупателей, учавствуйте в тендерах, размещейте объявления о продаже.</p>
                             <div class="saving-transition">
                                 <a href="#" class="saving-transition__link">
-                                    Перейти к тендерам                                   
+                                    Перейти к тендерам
                                 </a>
                                 <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M12.3536 4.35355C12.5488 4.15829 12.5488 3.84171 12.3536 3.64645L9.17157 0.464466C8.97631 0.269204 8.65973 0.269204 8.46447 0.464466C8.2692 0.659728 8.2692 0.976311 8.46447 1.17157L11.2929 4L8.46447 6.82843C8.2692 7.02369 8.2692 7.34027 8.46447 7.53553C8.65973 7.7308 8.97631 7.7308 9.17157 7.53553L12.3536 4.35355ZM0 4.5H12V3.5H0V4.5Z"/>
@@ -587,7 +587,7 @@
                             </div>
                             <div>
                                 <button class="btn btn-secondary">Объявить тендер</button>
-                            </div>                           
+                            </div>
                         </div>
                     </div>
                     <div class="saving__col">
@@ -596,7 +596,7 @@
                             <p class="saving-sector__text">Всего 3 минуты и Вашу заявку получат Основные поставщики в выбранных Вами Регионах РФ и стран СНГ!</p>
                             <div class="saving-transition">
                                 <a href="#" class="saving-transition__link">
-                                    Перейти к заявкам                                    
+                                    Перейти к заявкам
                                 </a>
                                 <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M12.3536 4.35355C12.5488 4.15829 12.5488 3.84171 12.3536 3.64645L9.17157 0.464466C8.97631 0.269204 8.65973 0.269204 8.46447 0.464466C8.2692 0.659728 8.2692 0.976311 8.46447 1.17157L11.2929 4L8.46447 6.82843C8.2692 7.02369 8.2692 7.34027 8.46447 7.53553C8.65973 7.7308 8.97631 7.7308 9.17157 7.53553L12.3536 4.35355ZM0 4.5H12V3.5H0V4.5Z"/>
@@ -604,7 +604,7 @@
                             </div>
                             <div>
                                 <button class="btn btn-secondary">Добавить заявку</button>
-                            </div>      
+                            </div>
                         </div>
                     </div>
                     <div class="saving__col">
@@ -613,7 +613,7 @@
                             <p class="saving-sector__text">Покупайте, продавайте и предлагайте Ваши услуги, на строительные материалы, на нашей доске объявлений.</p>
                             <div class="saving-transition">
                                 <a href="#" class="saving-transition__link">
-                                    Перейти к объявлениям                                   
+                                    Перейти к объявлениям
                                 </a>
                                 <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M12.3536 4.35355C12.5488 4.15829 12.5488 3.84171 12.3536 3.64645L9.17157 0.464466C8.97631 0.269204 8.65973 0.269204 8.46447 0.464466C8.2692 0.659728 8.2692 0.976311 8.46447 1.17157L11.2929 4L8.46447 6.82843C8.2692 7.02369 8.2692 7.34027 8.46447 7.53553C8.65973 7.7308 8.97631 7.7308 9.17157 7.53553L12.3536 4.35355ZM0 4.5H12V3.5H0V4.5Z"/>
@@ -793,7 +793,7 @@
             <h3 class="faq__title h1">
                 Часто задаваемые вопросы
             </h3>
-            <div class="faq__item js-faq">
+            <div class="faq__item js-faq" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                 <div class="fag__head">
                     <h6 class="faq__caption">
                         Точно ли я начну получать заказы?
@@ -807,13 +807,13 @@
                         </svg>
                     </a>
                 </div>
-                <p class="faq__body js-faq-body">
+                <p class="faq__body collapse" id="collapseExample">
                     Мы абсолютно уверены в том, что вы будете получать заявки и звонки с нашего портала. Помимо опыта
                     наших партнеров, об этом говорит статистика — 150 тыс. уникальных посетителей сайта (70% новых), 1.5
                     миллиона просмотров, более 5000 “горячих” покупателей в день переходят на сайты наших клиентов .
                 </p>
             </div>
-            <div class="faq__item js-faq">
+            <div class="faq__item js-faq" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
                 <div class="fag__head">
                     <h6 class="faq__caption">
                         Как разместить прайс-лист на вашем портале?
@@ -827,13 +827,13 @@
                         </svg>
                     </a>
                 </div>
-                <p class="faq__body">
+                <p class="faq__body collapse" id="collapseExample1">
                     Мы абсолютно уверены в том, что вы будете получать заявки и звонки с нашего портала. Помимо опыта
                     наших партнеров, об этом говорит статистика — 150 тыс. уникальных посетителей сайта (70% новых), 1.5
                     миллиона просмотров, более 5000 “горячих” покупателей в день переходят на сайты наших клиентов .
                 </p>
             </div>
-            <div class="faq__item js-faq">
+            <div class="faq__item js-faq" data-bs-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">
                 <div class="fag__head">
                     <h6 class="faq__caption">
                         В каких регионах я могу разместить своё предложение?
@@ -847,13 +847,13 @@
                         </svg>
                     </a>
                 </div>
-                <p class="faq__body">
+                <p class="faq__body collapse" id="collapseExample2">
                     Мы абсолютно уверены в том, что вы будете получать заявки и звонки с нашего портала. Помимо опыта
                     наших партнеров, об этом говорит статистика — 150 тыс. уникальных посетителей сайта (70% новых), 1.5
                     миллиона просмотров, более 5000 “горячих” покупателей в день переходят на сайты наших клиентов .
                 </p>
             </div>
-            <div class="faq__item js-faq">
+            <div class="faq__item js-faq" data-bs-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
                 <div class="fag__head">
                     <h6 class="faq__caption">
                         Могу ли я получать еще больше звонков и заявок?
@@ -867,12 +867,13 @@
                         </svg>
                     </a>
                 </div>
-                <p class="faq__body">
+                <p class="faq__body collapse" id="collapseExample3">
                     Мы абсолютно уверены в том, что вы будете получать заявки и звонки с нашего портала. Помимо опыта
                     наших партнеров, об этом говорит статистика — 150 тыс. уникальных посетителей сайта (70% новых), 1.5
                     миллиона просмотров, более 5000 “горячих” покупателей в день переходят на сайты наших клиентов .
                 </p>
             </div>
+
         </div>
     </section>
 
